@@ -1,5 +1,6 @@
 
 5.30  2014-08-17
+  - Improved Mojolicious::Static to only handle GET and HEAD requests.
   - Improved Mojo::URL performance.
   - Improved url_for performance slightly.
   - Fixed Mojo::IOLoop::Client to use a timeout for every connection.
